# Chandra

./: .gitignore  Chandra_c++.md  QUICK_APP_NAMING.md  README.md
cpp-app/: CMakeLists.txt  CMakePresets.json  resources.qrc
cpp-app/docs/: APP_NAMING.md  toolchain.md
cpp-app/platform/windows/: chandra_journey.nsi  chandra_journey.nsi.in  deploy.ps1
cpp-app/src/: AppConfig.h.in
cpp-app/src/app/: AppController.cpp  AppController.h  main.cpp
cpp-app/src/core/: DataPaths.cpp  DataPaths.h  Security.cpp  Security.h
cpp-app/src/data/: DatabaseManager.cpp  DatabaseManager.h  UserRepository.cpp  UserRepository.h
cpp-app/src/services/: FileMediaService.cpp  FileMediaService.h  JournalService.cpp  JournalService.h  SettingsService.cpp  SettingsService.h
cpp-app/tests/: RegressionTests.cpp
cpp-app/ui/qml/: Main.qml
cpp-app/ui/qml/views/: AdminView.qml  CameraView.qml  ImportView.qml  JournalView.qml  LoginView.qml  MyProfileView.qml  SettingsView.qml  ShellView.qml  WardrobeView.qml
